# aircost

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
aircost/: __init__.py  annual_costs.py  depreciation.py  depreciation_validation.py  economics_comparison.py  investment_returns.py  rental_costs.py
chrome-extension/: background.js  background.test.mjs  manifest.json  popup.css  popup.html  popup.js  popup.test.mjs
config/: aircraft.example.json  common.json  costs.example.json  ct182t.aircraft.json  gemini.example.toml  gemini.toml  investment.example.json  investment.json  rental.json  rental_sr20.json  rental_sr22t.json  sling_hw.aircraft.json  sling_tsi.aircraft.json  sr20_g6.aircraft.json  sr22t_g6.aircraft.json
data/: depreciation_validation_listings.json
docs/: annual_cost_model.md  database.md  depreciation_model.md  gemini_model_benchmark_20260721.md  investment_return_model.md  llm_usage.md  purchase_vs_rent_invest.md  rental_cost_model.md  webapp.md
migrations/: 20260720_valuation_data_hardening.postgres.sql  20260720_valuation_data_hardening.sqlite.sql  20260721_avionics_catalog_curation.postgres.sql  20260721_avionics_catalog_curation.sqlite.sql  20260721_avionics_multi_type.postgres.sql  20260721_avionics_multi_type.sqlite.sql  20260722_aircraft_reference_catalog.postgres.sql  20260722_aircraft_reference_catalog.sqlite.sql  20260723_gemini_usage_accounting.postgres.sql  20260723_gemini_usage_accounting.sqlite.sql
schema/: postgres.sql  sqlite.sql
scripts/: compare_purchase_rent_invest.py  run_webapp.py  (+5 more)
(+92 files in other folders)
