[package]
name = "aircost-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aircost-web"
path = "src/main.rs"

[[bin]]
name = "aircost-admin"
path = "src/admin.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
eoka = "0.4"
html-escape = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["charset", "gzip", "json", "rustls"] }
ring = "0.17"
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["macros", "postgres", "runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
url = "2"
