[project]
name = "aircost"
version = "0.1.0"
description = "Aircraft depreciation and ownership cost modeling scripts."
requires-python = ">=3.10"

[project.scripts]
compare-purchase-rent-invest = "aircost.cli.compare_purchase_rent_invest:main"
estimate-aircraft-price = "aircost.cli.estimate_aircraft_price:main"
project-aircraft-costs = "aircost.cli.project_aircraft_costs:main"
project-investment-returns = "aircost.cli.project_investment_returns:main"
project-rental-costs = "aircost.cli.project_rental_costs:main"
validate-depreciation-model = "aircost.cli.validate_depreciation_model:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
